# ziggy-stardust-pyders-from-mars

./: pyproject.toml
pydust/: __main__.py  buildzig.py  config.py
