[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pydust"
version = "0.1.0"
description = ""
authors = [{name="Nicholas Gates", email="nick@fulcrum.so"}]
readme = "README.md"
license = "Apache-2.0"
keywords = []
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python",
]
dependencies = [
"ziglang >=0.11.0, == 0.*",
"pydantic >=2.3.0, ==2.*",
"setuptools >=69.0.0, ==69.*",
"black >23.9.1, ==23.*",
]

# Out test modules

[tool.pydust]
root = "example/"
build_zig = "pytest.build.zig"

[[tool.pydust.ext_module]]
name = "example.exceptions"
root = "example/exceptions.zig"

[[tool.pydust.ext_module]]
name = "example.hello"
root = "example/hello.zig"

[[tool.pydust.ext_module]]
name = "example.gil"
root = "example/gil.zig"

[[tool.pydust.ext_module]]
name = "example.memory"
root = "example/memory.zig"

[[tool.pydust.ext_module]]
name = "example.modules"
root = "example/modules.zig"

[[tool.pydust.ext_module]]
name = "example.pytest"
root = "example/pytest.zig"

[[tool.pydust.ext_module]]
name = "example.result_types"
root = "example/result_types.zig"

[[tool.pydust.ext_module]]
name = "example.functions"
root = "example/functions.zig"

[[tool.pydust.ext_module]]
name = "example.classes"
root = "example/classes.zig"

[[tool.pydust.ext_module]]
name = "example.buffers"
root = "example/buffers.zig"

[[tool.pydust.ext_module]]
name = "example.iterators"
root = "example/iterators.zig"

[[tool.pydust.ext_module]]
name = "example.operators"
root = "example/operators.zig"

[[tool.pydust.ext_module]]
name = "example.code"
root = "example/code.zig"
