[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pydust"
version = "0.1.0"
description = ""
authors = [{name="Nicholas Gates", email="nick@fulcrum.so"}]
readme = "README.md"
license = "Apache-2.0"
keywords = []
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python",
]

